--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,37 @@ header {
   justify-content: center;
   align-items: center;
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: clamp(5px, 30px, 35px);
+}
+
+.main-screen {
+  display: flex;
+  min-height: 80%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 5px solid var(--accent);
+  border-radius: 10px;
+  background-color: var(--secondary);
+  gap: 25px;
+}
+
+button {
+  border: 2px solid var(--secondary);
+  background-color: var(--primary);
+  border-radius: 10px;
+  padding: 15px 20px;
+  font-size: 1.6rem;
+  font-weight: 600;
+  transition: background-color 300ms 100ms ease-in-out;
+}
+
+button:hover {
+  background-color: var(--accent);
+  cursor: pointer;
+}
