--- a/src/components/game/Card.css
+++ b/src/components/game/Card.css
@@ -1,10 +1,22 @@
 .card {
-    border: 2px solid black;
+    border-radius: 8px;
+    box-shadow: 3px 2px 8px 2px #00000091;
     width: 100%;
     aspect-ratio: 4 / 5;
+    padding: clamp(5px, 15px, 25px);
+    background-color: var(--secondary);
+    transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
 }
 
 .card > img {
     width: 100%;
     max-height: 100%;
+    background-color: rgba(0, 0, 0, 0.286);
+    border-radius: 15px;
+}
+
+.card:hover {
+    transform: translate(-5px, -5px);
+    box-shadow: 6px 4px 8px 2px var(--primary);
+    cursor: pointer;
 }
