--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,6 @@ header {
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   padding: clamp(5px, 30px, 35px);
 }
 
@@ -43,4 +40,38 @@ button {
 button:hover {
   background-color: var(--accent);
   cursor: pointer;
+}
+
+.score-header {
+  display: flex;
+  gap: 20px;
+  background-color: var(--accent);
+  padding: clamp(5px, 15px, 20px);
+  font-size: 1.4rem;
+  font-weight: 600;
+  border-radius: 10px;
+}
+
+.load-screen {
+  display: flex;
+  justify-content: center;
+  font-size: 2rem;
+  font-weight: 900;
+  color: var(--accent);
+  animation-name: load-screen;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes load-screen {
+  from {
+    transform: scale(0.80);
+    color: var(--primary);
+  }
+
+  to {
+    transform: scale(1);
+    color: var(--secondary);
+  }
 }
